* Documentation updates from Dave Mills.
(4.2.5p225) 2009/09/30 Released by Harlan Stenn <stenn@ntp.org>
* authopt documentation changes from Dave Mills/Dave Hart.
* [Bug 1324] support bracketed IPv6 numeric addresses for restrict.
(4.2.5p224) 2009/09/29 Released by Harlan Stenn <stenn@ntp.org>
* Clockhop and documentation fixes from Dave Mills.
* Remove "tos maxhop" ntp.conf knob.
(4.2.5p223) 2009/09/28 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1321] build doesn't work if . isn't on $PATH.
* [Bug 1323] Implement "revoke #" to match documentation, deprecate
  "crypto revoke #".
(4.2.5p222) 2009/09/27 Released by Harlan Stenn <stenn@ntp.org>
* Update libisc code using bind-9.6.1-P1.tar.gz, rearrange our copy to
  mirror the upstream layout (lib/isc/...), and merge in NTP-local
  modifications to libisc.  There is a new procedure to ease future
  libisc merges using a separate "upstream" bk repo.  That will enable
  normal bk pull automerge to handle carrying forward any local changes
  and should enable us to take updated libisc snapshots more often.
* Updated build and flock-build scripts.  flock-build --one is a way
  to perform a flock-build compatible solitary build, handy for a repo
  clone's first build on a machine with autoconf, automake, etc.
* Compiling ntp_parser.y using BSD make correctly places ntp_parser.h
  in the top-level ntpd directory instead of A.*/ntpd.
* bootstrap script updated to remove potentially stale .deps dirs.
* Remove unneeded Makefile.am files from the lib/isc/include tree.
(4.2.5p221) 2009/09/26 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1316] segfault if refclock_nmea can't open file.
* [Bug 1317] Distribute cvo.sh.
(4.2.5p220) 2009/09/25 Released by Harlan Stenn <stenn@ntp.org>
* Rearrange libisc code to match the upstream layout in BIND.  This is
  step one of two, changing the layout but keeping our existing libisc.
(4.2.5p219) 2009/09/24 Released by Harlan Stenn <stenn@ntp.org>