@@ -1,3 +1,4 @@
+* Clockhop and autokey cleanup from Dave Mills.
 * Documentation updates from Dave Mills.
 (4.2.5p225) 2009/09/30 Released by Harlan Stenn <stenn@ntp.org>
 * authopt documentation changes from Dave Mills/Dave Hart.
